# maxfuse

./: .gitignore  .gitmodules  Aberrant immune regulation and enrichment of stem_LDP_revision_12_10_LDP_1.docx  CLAUDE.md  environment.yml  pyproject.toml  pyrightconfig.json  seurat_obj.txt
.claude/commands/: advise.md  retrospective.md
docs/: conf.py
examples/: citeseq_pbmc_evaluate.ipynb
examples/data/: README.md
notebooks/: 1_preprocessing.ipynb  1_preprocessing_v2.ipynb  2_integration.ipynb  2_integration_v2.ipynb  2_integration_v3.ipynb  3_visualization_v2.ipynb  4_multi_sample.ipynb  4_tcell_integration.ipynb  5_analysis.ipynb  6551_validation.ipynb  CLAUDE.md  phenocycler_rnaseq_integration.ipynb  qc_dashboard.py  visualization.py
scripts/: list_cells.py
src/maxfuse/: README.md  __init__.py  pyproject.toml
src/maxfuse/core/: __init__.py  match_utils.py  model.py  spatial_utils.py
src/maxfuse/mario/: __init__.py  match.py  utils.py
