[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maxfuse"
version = "0.1.0"
description = "Cross-modal single-cell data integration with spatial awareness"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
authors = [
    {name = "Shuxiao Chen", email = "shuxiaoc@gmail.com"},
    {name = "Bokai Zhu", email = "bkzhu@stanford.edu"},
]
keywords = ["single-cell", "integration", "spatial", "multimodal", "CODEX", "scRNAseq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "scanpy>=1.9",
    "igraph>=0.10",
    "leidenalg>=0.9",
    "matplotlib>=3.5",
    "requests>=2.25",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff"]
docs = ["sphinx", "sphinx-rtd-theme", "nbsphinx"]
harmony = ["harmonypy"]

[project.urls]
Homepage = "https://github.com/shuxiaoc/maxfuse"
Documentation = "https://maxfuse.readthedocs.io"
"Bug Tracker" = "https://github.com/shuxiaoc/maxfuse/issues"

[tool.hatch.build.targets.wheel]
only-include = ["__init__.py", "core", "mario"]

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "maxfuse/__init__.py"
"core" = "maxfuse/core"
"mario" = "maxfuse/mario"
